--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
       </section>
 
-      <section id="Partners">
+      <div id="Partners">
         <img src="./images/logo-google.png" alt="logo-google" />
         <img src="./images/logo-ibm.png" alt="logo-ibm" />
         <img src="./images/logo-microsoft.png" alt="logo-microsoft" />
@@ -116,7 +116,7 @@
           src="./images/logo-vector-graphics.png"
           alt="logo-vector-graphics"
         />
-      </section>
+      </div>
 
       <section id="Download">
         <div class="DownloadGuid">
